--- a/group.html
+++ b/group.html
@@ -15,7 +15,7 @@
 
     <!-- Common CSS Link -->
     <link rel="stylesheet" href="common.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
 
     <!-- Font Aswesome Link -->
     <script
@@ -27,7 +27,7 @@
     <!-- Web Header Here -->
     <header>
       <div class="left">
-        <img src="images/qatar-1.png" alt="" />
+        <img src="images/qatar-1_5.png" alt="" />
       </div>
       <div class="uses">
         <i class="fa-solid fa-bars"></i>
@@ -46,7 +46,7 @@
         <a href="#sign-up">sign up</a>
       </div>
       <div class="right">
-        <img src="images/qatar-1.png" alt="" />
+        <img src="images/qatar-1_5.png" alt="" />
       </div>
     </header>
     <!-- main section started -->
@@ -75,8 +75,8 @@
             <div class="present"><a href="group.html">All Group</a></div>
             <div class="past"><a href="index.html">Blog</a></div>
           </div>
-          <div class="upcoming-matches">
-            <div class="match-details">
+          <div class="World-cup-Qualifiers">
+            <div class="final-groups">
               <h3>Group A</h3>
               <hr />
               <div class="flexing">
@@ -96,7 +96,7 @@
                 <div><span>Bangladesh</span></div>
               </div>
             </div>
-            <div class="match-details">
+            <div class="final-groups">
               <h3>Group B</h3>
               <hr />
               <div class="flexing">
@@ -116,7 +116,7 @@
                 <div><span>Bangladesh</span></div>
               </div>
             </div>
-            <div class="match-details">
+            <div class="final-groups">
               <h3>Group C</h3>
               <hr />
               <div class="flexing">
@@ -136,7 +136,7 @@
                 <div><span>Bangladesh</span></div>
               </div>
             </div>
-            <div class="match-details">
+            <div class="final-groups">
               <h3>Group D</h3>
               <hr />
               <div class="flexing">
@@ -156,7 +156,7 @@
                 <div><span>Bangladesh</span></div>
               </div>
             </div>
-            <div class="match-details">
+            <div class="final-groups">
               <h3>Group E</h3>
               <hr />
               <div class="flexing">
@@ -176,7 +176,7 @@
                 <div><span>Bangladesh</span></div>
               </div>
             </div>
-            <div class="match-details">
+            <div class="final-groups">
               <h3>Group F</h3>
               <hr />
               <div class="flexing">
@@ -196,7 +196,7 @@
                 <div><span>Bangladesh</span></div>
               </div>
             </div>
-            <div class="match-details">
+            <div class="final-groups">
               <h3>Group G</h3>
               <hr />
               <div class="flexing">
@@ -216,7 +216,7 @@
                 <div><span>Bangladesh</span></div>
               </div>
             </div>
-            <div class="match-details">
+            <div class="final-groups">
               <h3>Group H</h3>
               <hr />
               <div class="flexing">
