--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Common CSS Link -->
     <link rel="stylesheet" href="common.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
 
     <!-- Font Aswesome Link -->
     <script
@@ -27,13 +27,13 @@
     <!-- Web Header Here -->
     <header>
       <div class="left">
-        <img src="images/qatar-1.png" alt="" />
+        <img src="images/qatar-1_5.png" alt="" />
       </div>
       <div class="uses">
         <i class="fa-solid fa-bars"></i>
         <a class="active" href="#home">FIFA</a>
-        <a href="#contact">Home</a>
-        <a href="#about">Tournaments</a>
+        <a href="#Home">Home</a>
+        <a href="#Tounaments">Tournaments</a>
         <a class="active" href="#home">Live</a>
         <a href="#contact"></a>
         <a href="#about">News</a>
@@ -43,10 +43,10 @@
         <button>
           <a class="active" href="#sign-in">sign in</a>
         </button>
-        <a href="#sign-up">sign up</a>
+        <a class="passive" href="#sign-up">sign up</a>
       </div>
       <div class="right">
-        <img src="images/qatar-1.png" alt="" />
+        <img src="images/qatar-1_5.png" alt="" />
       </div>
     </header>
     <!-- main section started -->
@@ -126,10 +126,10 @@
             <div class="design">
               <img src="images/cr-7_.webp" alt="" />
               <div class="click-para">
-                <button><a href="https://t.ly/3tbS">click now</a></button>
+                <button><a href="shorturl.at/anOT9">click now</a></button>
                 <p>
-                  Cristiano Ronaldo comes out of silence: “The media tell a lot
-                  of lies”
+                  Shambolic Manchester United suffer humiliating 4-0 loss at
+                  Brentford | Football News
                 </p>
               </div>
               <div class="time-chat">
@@ -175,7 +175,7 @@
                 </button>
                 <p>
                   Neymar Leads Paris Saint-Germain to Big Opening Win in French
-                  League
+                  League,click to know assist?
                 </p>
               </div>
               <div class="time-chat">
