--- a/match.html
+++ b/match.html
@@ -15,7 +15,7 @@
 
     <!-- Common CSS Link -->
     <link rel="stylesheet" href="common.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
 
     <!-- Font Aswesome Link -->
     <script
@@ -27,7 +27,7 @@
     <!-- Web Header Here -->
     <header>
       <div class="left">
-        <img src="images/qatar-1.png" alt="" />
+        <img src="images/qatar-1_5.png" alt="" />
       </div>
       <div class="uses">
         <i class="fa-solid fa-bars"></i>
@@ -46,7 +46,7 @@
         <a href="#sign-up">sign up</a>
       </div>
       <div class="right">
-        <img src="images/qatar-1.png" alt="" />
+        <img src="images/qatar-1_5.png" alt="" />
       </div>
     </header>
     <!-- main section started -->
