--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@
           </div>
         </div>
       </section>
+      <!-- ViewAll Button For The table User Is Here -->
+      <div class="view-all">
+        <button>View All</button>
+      </div>
     </main>
 
     <!-------------------
