--- a/group.html
+++ b/group.html
@@ -73,7 +73,7 @@
           <div class="menu-option">
             <div class="past"><a href="match.html">Upcoming Match</a></div>
             <div class="present"><a href="group.html">All Group</a></div>
-            <div class="past"><a href="index.html">Blog</a></div>
+            <div class="past-"><a href="index.html">Blog</a></div>
           </div>
           <div class="World-cup-Qualifiers">
             <div class="final-groups">
