--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
             Qatar- wherever you are with just a click
           </p>
           <button>
-            <a id="live" target="_blank" href="">Watch Live</a>
+            <a
+              id="live"
+              href="http://mz.freestreams-live1.com/bein-sports-xtra/"
+              >Watch Live</a
+            >
             <i class="fa-solid fa-angle-right"></i>
           </button>
         </div>
