Watch Live Solve

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <button>
             <a
               id="live"
+              target="_blank"
               href="http://mz.freestreams-live1.com/bein-sports-xtra/"
               >Watch Live</a
             >
