--- a/index.html
+++ b/index.html
@@ -243,6 +243,16 @@
           <a href="">Terms of Service</a>
           <a href="">Privacy Policy</a>
           <a href="">Privacy Settings </a>
+          <a class="move_Left" href="">Goal App</a>
+          <a href="">Goal Live</a>
+        </div>
+        <div class="footer-link-1">
+          <a href="">Contact Us</a>
+          <a href="">Terms of Service</a>
+          <a href="">Privacy Policy</a>
+          <a href="">Privacy Settings </a>
+        </div>
+        <div class="footer-link-2">
           <a href="">Goal App</a>
           <a href="">Goal Live</a>
         </div>
