Match & Group Page View All & Others Fixing

--- a/group.html
+++ b/group.html
@@ -239,6 +239,10 @@
           </div>
         </div>
       </section>
+      <!-- ViewAll Button For The table User Is Here -->
+      <div class="view-all">
+        <button>View All</button>
+      </div>
     </main>
 
     <!-- footer started here -->
@@ -251,6 +255,16 @@
           <a href="">Terms of Service</a>
           <a href="">Privacy Policy</a>
           <a href="">Privacy Settings </a>
+          <a href="">Goal App</a>
+          <a href="">Goal Live</a>
+        </div>
+        <div class="footer-link-1">
+          <a href="">Contact Us</a>
+          <a href="">Terms of Service</a>
+          <a href="">Privacy Policy</a>
+          <a href="">Privacy Settings </a>
+        </div>
+        <div class="footer-link-2">
           <a href="">Goal App</a>
           <a href="">Goal Live</a>
         </div>
