--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a
               id="live"
               target="_blank"
-              href="http://mz.freestreams-live1.com/bein-sports-xtra/"
+              href="https://alkoora.live-kooora-tv.com/"
               >Watch Live</a
             >
             <i class="fa-solid fa-angle-right"></i>
